@@ -68,6 +68,11 @@
 			<version>2025.4.5</version>
 		</dependency>
 		<dependency>
+			<groupId>org.eclipse.syson</groupId>
+			<artifactId>syson-services</artifactId>
+			<version>2025.4.5</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
