@@ -39,6 +39,8 @@ They are now named:
 * `New Assume constraint`
 
 - In the _Details_ view, fix an issue that prevents opening the candidates on a reference widget.
+- Fix an issue in the textual import of `MultiplicityRange` with explicit lower and upper bounds.
+The textual import now correctly creates a `MultiplicityRange` containing `LiteralInteger` elements for integer bounds, and `FeatureReferenceExpression` elements for feature bounds.
 
 == New features
 
